syntax = "proto3";
package api;

message EmailAddress {
	string Email = 1;
}

service Accounts {
	rpc Create(NewAccount) returns (CreatedAccount);
}

message CreatedAccount {
	int32 UID = 1;
}

message NewAccount {
	int32 UID = 1;
	string Login = 2;
	string Email = 3;
	string Password = 4;
}