syntax = "proto3";
package api;

import "google/protobuf/timestamp.proto";

message User {
	string ID = 1;
	string Login = 2;
	string Name = 3;
	google.protobuf.Timestamp RegisteredAt = 4;
}